fix mobile overlap

--- a/assets/scss/components/_work.scss
+++ b/assets/scss/components/_work.scss
@@ -129,7 +129,7 @@
           opacity: 0.5;
         }
 
-        p {
+        .site-work-works-image-item-title {
           visibility: visible;
         }
       }
@@ -144,7 +144,9 @@
       }      
 
       &-title {
+        width: 100%;
         font-size: 28px;
+        text-align: center;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -152,7 +154,7 @@
         color: white;
         visibility: hidden;
         transition: visibility 0.1s ease;
-        white-space: nowrap;
+        // white-space: nowrap;
       }
     }
   }
